# UEFI-OS

./: .gitignore  README.md
os_kernel/: BUILD_INSTRUCTIONS.md  Cargo.toml  README.md
os_kernel/.cargo/: config.toml
os_kernel/src/: main.rs
