[package]
name = "os_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.36", features = ["alloc", "logger"] }
uefi-services = "0.26"
log = "0.4"
spin = "0.9"
num-traits = "0.4"
num-derive = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
